# polymarket-trading

./: .env.example  .gitignore  README.md  plan.md  pyproject.toml  research.md
api/: pyproject.toml
api/app/: config.py  dependencies.py  main.py
api/app/db/: __init__.py  init.py  session.py
api/app/routes/: auth.py  bots.py  runs.py
api/app/services/: __init__.py  auth_service.py  bot_service.py
config/: settings.py
docs/: ANALYSIS.md  MIGRATION_PLAN.md  WEBAPP_ARCHITECTURE.md
frontend/: next-env.d.ts  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/app/: page.tsx
frontend/components/: dashboard.tsx  providers.tsx
frontend/lib/: api.ts
legacy/: README.md
shared/python/: pyproject.toml
shared/python/shared/: __init__.py
shared/python/shared/domain/: __init__.py  models.py
shared/python/shared/strategy/: __init__.py  base.py
src/: main.py
src/client/: clob.py  gamma.py  websocket.py
src/data/: market_store.py  price_history.py
src/execution/: paper.py  risk.py  trader.py
src/strategy/: arbitrage.py  base.py  ensemble.py  momentum.py  orderbook_imbalance.py
src/utils/: logger.py  telegram.py
tests/: test_paper_trader.py  test_risk.py  test_strategies.py
worker/: pyproject.toml
worker/app/: __init__.py  main.py
worker/app/execution/: __init__.py  paper_executor.py
worker/app/market/: __init__.py  history.py  simulator.py  store.py
worker/app/runtime/: __init__.py  manager.py  runtime.py  service.py
worker/app/strategies/: __init__.py  market_follow.py
